Removed the storage of the password.